finished adding images to article containers

--- a/pages/article_threats.html
+++ b/pages/article_threats.html
@@ -30,9 +30,11 @@
 						<i class="fa fa-bars hamburger" id="hamburger" aria-hidden="true"></i>
 					</div>
 					<nav id="mobile">
+						<i class="fa fa-times" aria-hidden="true" id="closeMenu"></i>
 						<ul>
 							<a href="../index.html"><li>Home</li></a>
-							<a href="#"><li>Educational Resources</li></a>
+							<a href="aboutUs.html"><li>More About Us</li></a>
+							<a href="education.html"><li>Educational Resources</li></a>
 							<a href="articles.html"><li>Articles</li></a>
 							<a href="joinUs.html"><li class="highlighted">Join Us</li></a>
 							<a href="#"><li class="highlighted">Donations</li></a>
@@ -55,6 +57,7 @@
 
 					<ul>
 						<a href="../index.html"><li>Home</li></a>
+						<a href="aboutUs.html"><li>More About Us</li></a>
 						<a href="education.html"><li>Educational Resources</li></a>
 						<a href="articles.html"><li>Articles</li></a>
 						<a href="joinUs.html"><li class="highlighted">Join Us</li></a>
@@ -79,7 +82,7 @@
 							</div>
 
 							<div class="article__image">
-								<img src="../assets/threats_ponds.jpg" alt="a pond that is connected to the P&amacr;uatahnui Inlet" id="exampleOfThreats">
+								<img src="../assets/threats_ponds.jpg" alt="a pond that is connected to the P&amacr;uatahnui Inlet|Photo by Jeffrey Workman on Unsplash" id="exampleOfThreats">
 							</div>
 						<!-- </div> -->
 
