--- a/pages/articles.html
+++ b/pages/articles.html
@@ -30,8 +30,10 @@
 						<i class="fa fa-bars hamburger" id="hamburger" aria-hidden="true"></i>
 					</div>
 					<nav id="mobile">
+						<i class="fa fa-times" aria-hidden="true" id="closeMenu"></i>
 						<ul>
 							<a href="../index.html"><li>Home</li></a>
+							<a href="aboutUs.html"><li>More About Us</li></a>
 							<a href="education.html"><li>Educational Resources</li></a>
 							<a href="articles.html"><li>Articles</li></a>
 							<a href="joinUs.html"><li class="highlighted">Join Us</li></a>
@@ -55,6 +57,7 @@
 
 					<ul>
 						<a href="../index.html"><li>Home</li></a>
+						<a href="aboutUs.html"><li>More About Us</li></a>
 						<a href="education.html"><li>Educational Resources</li></a>
 						<a href="articles.html"><li>Articles</li></a>
 						<a href="joinUs.html"><li class="highlighted">Join Us</li></a>
@@ -86,12 +89,11 @@
 					</div>
 					<!-- Sample article -->
 					<div class="article__container">
-						<div class="article__container--image">
-							<div class="test"></div>
+						<div class="article__container--image" id="imgCockle">
 						</div>
 						<div class="article__container--text">
-							<h4>Sample</h4>
-							<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod...</p>
+							<h4>All About Tuangi</h4>
+							<p>Many people use the Pāuatahanui Inlet for a variety of leisure activities...</p>
 						</div>
 						<div class="article__container--btn">
 							<a href="#">
@@ -103,12 +105,11 @@
 					</div>
 					<!-- Sample article -->
 					<div class="article__container">
-						<div class="article__container--image">
-							<div class="test"></div>
+						<div class="article__container--image" id="imgSaltMarsh">
 						</div>
 						<div class="article__container--text">
-							<h4>Sample</h4>
-							<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod...</p>
+							<h4>Salt Marsh</h4>
+							<p>A salt marsh is a type of marsh occupying the intertidal area between land and salty water...</p>
 						</div>
 						<div class="article__container--btn">
 							<a href="#">
@@ -120,12 +121,11 @@
 					</div>
 					<!-- Sample article -->
 					<div class="article__container">
-						<div class="article__container--image">
-							<div class="test"></div>
+						<div class="article__container--image" id="imgBirds">
 						</div>
 						<div class="article__container--text">
-							<h4>Sample</h4>
-							<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod...</p>
+							<h4>What birds can be seen on the Inlet?</h4>
+							<p>Fifty species of birds regularly occur in the Pāuatahanui Inlet and its immediate terrestrial margin. Twenty-nine species are associated directly...</p>
 						</div>
 						<div class="article__container--btn">
 							<a href="#">
@@ -137,12 +137,11 @@
 					</div>
 					<!-- Sample article -->
 					<div class="article__container">
-						<div class="article__container--image">
-							<div class="test"></div>
+						<div class="article__container--image" id="imgReservation">
 						</div>
 						<div class="article__container--text">
-							<h4>Sample</h4>
-							<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod...</p>
+							<h4>Wildlife Reserve</h4>
+							<p>The 50-hectare Pāuatahanui Wildlife Management Reserve lies at the head of the Inlet. Four hectares are owned by the Royal...</p>
 						</div>
 						<div class="article__container--btn">
 							<a href="#">
@@ -154,12 +153,11 @@
 					</div>
 					<!-- Sample article -->
 					<div class="article__container">
-						<div class="article__container--image">
-							<div class="test"></div>
+						<div class="article__container--image" id="imgResponsibilities">
 						</div>
 						<div class="article__container--text">
-							<h4>Sample</h4>
-							<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod...</p>
+							<h4>Responsibilities and Relationships</h4>
+							<p>Responsibility for the Inlet involves the maintenance of good relationships between the local authorities, some central government departments and agencies...</p>
 						</div>
 						<div class="article__container--btn">
 							<a href="#">
