--- a/index.html
+++ b/index.html
@@ -31,8 +31,10 @@
 						<i class="fa fa-bars hamburger" id="hamburger" aria-hidden="true"></i>
 					</div>
 					<nav id="mobile">
+						<i class="fa fa-times" aria-hidden="true" id="closeMenu"></i>
 						<ul>
 							<a href="index.html"><li>Home</li></a>
+							<a href="pages/aboutUs.html"><li>More About Us</li></a>
 							<a href="pages/education.html"><li>Educational Resources</li></a>
 							<a href="pages/articles.html"><li>Articles</li></a>
 							<a href="pages/joinUs.html"><li class="highlighted">Join Us</li></a>
@@ -55,6 +57,7 @@
 					<nav id="desktop">
 						<ul>
 							<a href="index.html"><li>Home</li></a>
+							<a href="pages/aboutUs.html"><li>More About Us</li></a>
 							<a href="pages/education.html"><li>Educational Resources</li></a>
 							<a href="pages/articles.html"><li>Articles</li></a>
 							<a href="pages/joinUs.html"><li class="highlighted">Join Us</li></a>
@@ -80,14 +83,14 @@
 
 					<!-- Div containing the carousel gallery -->
 					<div class="section__span">
-						<div class="section__carousel">
-							<div class="test"></div>
+						<div class="img__container" id="img1">
+
 						</div>
 					</div>
 
 					<div class="section__article--text">					
 
-						<p>On this website you can read about how we carefor the Inlet and promote its wellbeing withcentral and local government. You can learn aboutour <b>activities</b> and <b>policies, and readour newsletters</b> and <b>annual reports</b>.You will find <b>scientific information</b> aboutthe Inlet and its catchment and links to relevant<b>research</b>. The section 'The Inlet' containsinformation about the <b>natural</b> and <b>humanhistory</b> and current concerns about threats toInlet ecology. Teachers can download our <beducational</b> resources.</p>
+						<p>On this website you can read about how we carefor the Inlet and promote its wellbeing withcentral and local government. You can learn aboutour <b>activities</b> and <b>policies, and readour newsletters</b> and <b>annual reports</b>.You will find <b>scientific information</b> aboutthe Inlet and its catchment and links to relevant<b>research</b>. The section 'The Inlet' containsinformation about the <b>natural</b> and <b>humanhistory</b> and current concerns about threats toInlet ecology. Teachers can download our educational</b> resources.</p>
 
 					</div>
 
@@ -110,8 +113,8 @@
 
 					<!-- Gallery of images using flex box to reorganise itself -->
 					<div class="section__span">
-						<div class="section__gallery">
-							<div class="test"></div>
+						<div class="img__container" id="img2">
+							
 						</div>
 					</div>
 
