--- a/pages/joinUs.html
+++ b/pages/joinUs.html
@@ -30,8 +30,10 @@
 						<i class="fa fa-bars hamburger" id="hamburger" aria-hidden="true"></i>
 					</div>
 					<nav id="mobile">
+						<i class="fa fa-times" aria-hidden="true" id="closeMenu"></i>
 						<ul>
 							<a href="../index.html"><li>Home</li></a>
+							<a href="aboutUs.html"><li>More About Us</li></a>
 							<a href="education.html"><li>Educational Resources</li></a>
 							<a href="articles.html"><li>Articles</li></a>
 							<a href="joinUs.html"><li class="highlighted">Join Us</li></a>
@@ -55,6 +57,7 @@
 
 					<ul>
 						<a href="../index.html"><li>Home</li></a>
+						<a href="aboutUs.html"><li>More About Us</li></a>
 						<a href="education.html"><li>Educational Resources</li></a>
 						<a href="articles.html"><li>Articles</li></a>
 						<a href="joinUs.html"><li class="highlighted">Join Us</li></a>
