--- a/pages/aboutUs.html
+++ b/pages/aboutUs.html
@@ -33,7 +33,7 @@
 						<i class="fa fa-times" aria-hidden="true" id="closeMenu"></i>
 						<ul>
 							<a href="../index.html"><li>Home</li></a>
-							<a href="aboutUs.html"><li>More About Us</li></a>
+							<a href="aboutUs.html" class="nav__active"><li>More About Us</li></a>
 							<a href="education.html"><li>Educational Resources</li></a>
 							<a href="articles.html"><li>Articles</li></a>
 							<a href="joinUs.html"><li class="highlighted">Join Us</li></a>
@@ -57,7 +57,7 @@
 
 					<ul>
 						<a href="../index.html"><li>Home</li></a>
-						<a href="aboutUs.html"><li>More About Us</li></a>
+						<a href="aboutUs.html" class="nav__active"><li>More About Us</li></a>
 						<a href="education.html"><li>Educational Resources</li></a>
 						<a href="articles.html"><li>Articles</li></a>
 						<a href="joinUs.html"><li class="highlighted">Join Us</li></a>
@@ -75,19 +75,21 @@
 
 					<!-- Div containing the carousel image -->
 					<div class="section__span">
-						<div class="img__container" id="img1">
+						<div class="img__container" id="img_aboutCover">
 						</div>
 					</div>	
 
 					<!-- Div Containing About Section Tabs -->
 					<div class="about__container" id="tabs">
 						
-						<ul>
-							<li><a id="cfi" href="#tab-1">Who We Are</a></li>
-							<li><a id="oo" href="#tab-2">Our Objectives</a></li>
-							<li><a id="oc" href="#tab-3">Our Commitee</a></li>
-							<li><a id="op" href="#tab-4">Our Policies</a></li>
-						</ul>
+						<div class="about__btn--contaienr">
+							<ul>
+								<li><a id="cfi" href="#tab-1">Who We Are</a></li>
+								<li><a id="oo" href="#tab-2">Our Objectives</a></li>
+								<li><a id="oc" href="#tab-3">Our Commitee</a></li>
+								<li><a id="op" href="#tab-4">Our Policies</a></li>
+							</ul>
+						</div>
 
 						<div id="tab-1">
 							<div class="section__span">
@@ -116,6 +118,26 @@
 						</div>
 
 						<div id="tab-2">
+							<div class="section__span">
+								<h3>Work in Progress</h3>
+							</div>
+
+							<div class="about__text">
+								<p>This section is currently being worked on. Check back later to see the completed section!</p>
+							</div>
+						</div>
+
+						<div id="tab-3">
+							<div class="section__span">
+								<h3>Work in Progress</h3>
+							</div>
+
+							<div class="about__text">
+								<p>This section is currently being worked on. Check back later to see the completed section!</p>
+							</div>
+						</div>
+
+						<div id="tab-4">
 							<div class="section__span">
 								<h3>Work in Progress</h3>
 							</div>
