--- a/pages/joinUs.html
+++ b/pages/joinUs.html
@@ -36,7 +36,7 @@
 							<a href="aboutUs.html"><li>More About Us</li></a>
 							<a href="education.html"><li>Educational Resources</li></a>
 							<a href="articles.html"><li>Articles</li></a>
-							<a href="joinUs.html"><li class="highlighted">Join Us</li></a>
+							<a href="joinUs.html" class="nav__active"><li class="highlighted">Join Us</li></a>
 							<a href="#"><li class="highlighted">Donations</li></a>
 						</ul>
 					</nav>
@@ -60,7 +60,7 @@
 						<a href="aboutUs.html"><li>More About Us</li></a>
 						<a href="education.html"><li>Educational Resources</li></a>
 						<a href="articles.html"><li>Articles</li></a>
-						<a href="joinUs.html"><li class="highlighted">Join Us</li></a>
+						<a href="joinUs.html" class="nav__active"><li class="highlighted">Join Us</li></a>
 						<a href="#"><li class="highlighted">Donations</li></a>
 					</ul>
 
