--- a/pages/education.html
+++ b/pages/education.html
@@ -34,7 +34,7 @@
 						<ul>
 							<a href="../index.html"><li>Home</li></a>
 							<a href="aboutUs.html"><li>More About Us</li></a>
-							<a href="education.html"><li>Educational Resources</li></a>
+							<a href="education.html" class="nav__active"><li>Educational Resources</li></a>
 							<a href="articles.html"><li>Articles</li></a>
 							<a href="joinUs.html"><li class="highlighted">Join Us</li></a>
 							<a href="#"><li class="highlighted">Donations</li></a>
@@ -58,7 +58,7 @@
 					<ul>
 						<a href="../index.html"><li>Home</li></a>
 						<a href="aboutUs.html"><li>More About Us</li></a>
-						<a href="education.html"><li>Educational Resources</li></a>
+						<a href="education.html" class="nav__active"><li>Educational Resources</li></a>
 						<a href="articles.html"><li>Articles</li></a>
 						<a href="joinUs.html"><li class="highlighted">Join Us</li></a>
 						<a href="#"><li class="highlighted">Donations</li></a>
