made auto scrolling gallery

--- a/index.html
+++ b/index.html
@@ -82,11 +82,49 @@
 					</div>
 
 					<!-- Div containing the carousel gallery -->
-					<div class="section__span">
-						<div class="img__container" id="img1">
+					<div class="carousel__gallery">
+						<div class="section__span">
+							<h3>Photography Competition Highlights</h3>				
+						</div>
 
+						<div class="carousel__gallery--img fade">
+							<div id="carouselImg1"></div>
+						</div>
+
+						<div class="carousel__gallery--img fade">
+							<div id="carouselImg2"></div>
+						</div>
+
+						<div class="carousel__gallery--img fade">
+							<div id="carouselImg3"></div>
+						</div>
+
+						<div class="carousel__gallery--img fade">
+							<div id="carouselImg4"></div>
+						</div>
+
+						<div class="carousel__gallery--img fade">
+							<div id="carouselImg5"></div>
+						</div>
+
+						<div class="carousel__link">
+							<div class="section__span">
+								<p>We run a photograph comeptition every year over the summer holidays. Here is a sample of winners from 2015 till 2019.</p>
+							</div>
+							<div class="section__span">
+								<a class="btn__link" href="#">
+									<div class="section__btn btn">
+									<p class="btn">Checkout Previous Winners</p>
+									</div>
+								</a>
+							</div>
 						</div>
 					</div>
+
+					<!-- <div class="section__span">
+						<div class="img__container" id="img1">
+						</div>
+					</div> -->
 					
 					<!-- Button positioned after the article -->
 					<div class="section__span">
