fixed auto gallery link

--- a/pages/aboutUs.html
+++ b/pages/aboutUs.html
@@ -33,9 +33,10 @@
 						<i class="fa fa-times" aria-hidden="true" id="closeMenu"></i>
 						<ul>
 							<a href="../index.html"><li>Home</li></a>
-							<a href="aboutUs.html" class="nav__active"><li>More About Us</li></a>
+							<a href="aboutUs.html"><li>More About Us</li></a>
 							<a href="education.html"><li>Educational Resources</li></a>
 							<a href="articles.html"><li>Articles</li></a>
+							<a href="gallery.html"><li>Photo Competition - Gallary</li>
 							<a href="joinUs.html"><li class="highlighted">Join Us</li></a>
 							<a href="#"><li class="highlighted">Donations</li></a>
 						</ul>
@@ -57,9 +58,10 @@
 
 					<ul>
 						<a href="../index.html"><li>Home</li></a>
-						<a href="aboutUs.html" class="nav__active"><li>More About Us</li></a>
+						<a href="aboutUs.html"><li>More About Us</li></a>
 						<a href="education.html"><li>Educational Resources</li></a>
 						<a href="articles.html"><li>Articles</li></a>
+						<a href="gallery.html"><li>Photo Competition - Gallary</li>
 						<a href="joinUs.html"><li class="highlighted">Join Us</li></a>
 						<a href="#"><li class="highlighted">Donations</li></a>
 					</ul>
