--- a/pages/article_threats.html
+++ b/pages/article_threats.html
@@ -36,6 +36,7 @@
 							<a href="aboutUs.html"><li>More About Us</li></a>
 							<a href="education.html"><li>Educational Resources</li></a>
 							<a href="articles.html"><li>Articles</li></a>
+							<a href="gallery.html"><li>Photo Competition - Gallary</li>
 							<a href="joinUs.html"><li class="highlighted">Join Us</li></a>
 							<a href="#"><li class="highlighted">Donations</li></a>
 						</ul>
@@ -60,6 +61,7 @@
 						<a href="aboutUs.html"><li>More About Us</li></a>
 						<a href="education.html"><li>Educational Resources</li></a>
 						<a href="articles.html"><li>Articles</li></a>
+						<a href="gallery.html"><li>Photo Competition - Gallary</li>
 						<a href="joinUs.html"><li class="highlighted">Join Us</li></a>
 						<a href="#"><li class="highlighted">Donations</li></a>
 					</ul>
