--- a/pages/articles.html
+++ b/pages/articles.html
@@ -35,7 +35,8 @@
 							<a href="../index.html"><li>Home</li></a>
 							<a href="aboutUs.html"><li>More About Us</li></a>
 							<a href="education.html"><li>Educational Resources</li></a>
-							<a href="articles.html" class="nav__active"><li>Articles</li></a>
+							<a href="articles.html"><li>Articles</li></a>
+							<a href="gallery.html"><li>Photo Competition - Gallary</li>
 							<a href="joinUs.html"><li class="highlighted">Join Us</li></a>
 							<a href="#"><li class="highlighted">Donations</li></a>
 						</ul>
@@ -59,7 +60,8 @@
 						<a href="../index.html"><li>Home</li></a>
 						<a href="aboutUs.html"><li>More About Us</li></a>
 						<a href="education.html"><li>Educational Resources</li></a>
-						<a href="articles.html" class="nav__active"><li>Articles</li></a>
+						<a href="articles.html"><li>Articles</li></a>
+						<a href="gallery.html"><li>Photo Competition - Gallary</li>
 						<a href="joinUs.html"><li class="highlighted">Join Us</li></a>
 						<a href="#"><li class="highlighted">Donations</li></a>
 					</ul>
