fixed script. Added background image. Fixed navigation

--- a/index.html
+++ b/index.html
@@ -52,12 +52,12 @@
 			</header>
 
 			<!-- Nuts and bolts of the site, Contains the sections and navigation -->
-			<div class="body">
+			<div class="page__container">
 
 				<!-- Holds the navigation menu for desktop-->
 					<nav id="desktop">
 						<ul>
-							<a href="index.html" class="nav__active"><li>Home</li></a>
+							<a href="index.html" class="nav__active"><li class="index">Home</li></a>
 							<a href="pages/aboutUs.html"><li>More About Us</li></a>
 							<a href="pages/education.html"><li>Educational Resources</li></a>
 							<a href="pages/articles.html"><li>Articles</li></a>
@@ -113,7 +113,7 @@
 
 						<div class="carousel__link">
 							<div class="section__span">
-								<p>Sample of Photos from 2019</p>
+								<p>Sample of Photos from over the years</p>
 							</div>
 							<div class="section__span">
 								<a class="btn__link" href="pages/gallery.html">
