--- a/pages/articles.html
+++ b/pages/articles.html
@@ -35,7 +35,7 @@
 							<a href="../index.html"><li>Home</li></a>
 							<a href="aboutUs.html"><li>More About Us</li></a>
 							<a href="education.html"><li>Educational Resources</li></a>
-							<a href="articles.html"><li>Articles</li></a>
+							<a href="articles.html" class="nav__active"><li>Articles</li></a>
 							<a href="gallery.html"><li>Photo Competition - Gallary</li>
 							<a href="joinUs.html"><li class="highlighted">Join Us</li></a>
 							<a href="#"><li class="highlighted">Donations</li></a>
@@ -51,7 +51,7 @@
 			</header>
 
 			<!-- Nuts and bolts of the site, Contains the sections and navigation -->
-			<div class="body">
+			<div class="page__container">
 
 				<!-- Holds the navigation menu for desktop-->
 				<nav id="desktop">
@@ -60,7 +60,7 @@
 						<a href="../index.html"><li>Home</li></a>
 						<a href="aboutUs.html"><li>More About Us</li></a>
 						<a href="education.html"><li>Educational Resources</li></a>
-						<a href="articles.html"><li>Articles</li></a>
+						<a href="articles.html" class="nav__active"><li>Articles</li></a>
 						<a href="gallery.html"><li>Photo Competition - Gallary</li>
 						<a href="joinUs.html"><li class="highlighted">Join Us</li></a>
 						<a href="#"><li class="highlighted">Donations</li></a>
