--- a/pages/gallery.html
+++ b/pages/gallery.html
@@ -36,7 +36,7 @@
 							<a href="aboutUs.html"><li>More About Us</li></a>
 							<a href="education.html"><li>Educational Resources</li></a>
 							<a href="articles.html"><li>Articles</li></a>
-							<a href="gallery.html"><li>Photo Competition - Gallary</li>
+							<a href="gallery.html" class="nav__active"><li>Photo Competition - Gallary</li>
 							<a href="joinUs.html"><li class="highlighted">Join Us</li></a>
 							<a href="#"><li class="highlighted">Donations</li></a>
 						</ul>
@@ -51,7 +51,7 @@
 			</header>
 
 			<!-- Nuts and bolts of the site, Contains the sections and navigation (for desktop) -->
-			<div class="body">
+			<div class="page__container">
 
 				<!-- Holds the navigation menu for desktop-->
 				<nav id="desktop">
@@ -61,7 +61,7 @@
 						<a href="aboutUs.html"><li>More About Us</li></a>
 						<a href="education.html"><li>Educational Resources</li></a>
 						<a href="articles.html"><li>Articles</li></a>
-						<a href="gallery.html"><li>Photo Competition - Gallary</li>
+						<a href="gallery.html" class="nav__active"><li>Photo Competition - Gallary</li>
 						<a href="joinUs.html"><li class="highlighted">Join Us</li></a>
 						<a href="#"><li class="highlighted">Donations</li></a>
 					</ul>
