--- a/pages/template.html
+++ b/pages/template.html
@@ -51,7 +51,7 @@
 			</header>
 
 			<!-- Nuts and bolts of the site, Contains the sections and navigation (for desktop) -->
-			<div class="body">
+			<div class="page__container">
 
 				<!-- Holds the navigation menu for desktop-->
 				<nav id="desktop">
