--- a/pages/aboutUs.html
+++ b/pages/aboutUs.html
@@ -33,10 +33,10 @@
 						<i class="fa fa-times" aria-hidden="true" id="closeMenu"></i>
 						<ul>
 							<a href="../index.html"><li>Home</li></a>
-							<a href="aboutUs.html"><li>More About Us</li></a>
+							<a href="aboutUs.html" class="nav__active"><li>More About Us</li></a>
 							<a href="education.html"><li>Educational Resources</li></a>
 							<a href="articles.html"><li>Articles</li></a>
-							<a href="gallery.html"><li>Photo Competition - Gallary</li>
+							<a href="gallery.html"><li>Photo Competition - Gallary</li></a>
 							<a href="joinUs.html"><li class="highlighted">Join Us</li></a>
 							<a href="#"><li class="highlighted">Donations</li></a>
 						</ul>
@@ -51,14 +51,14 @@
 			</header>
 
 			<!-- Nuts and bolts of the site, Contains the sections and navigation (for desktop) -->
-			<div class="body">
+			<div class="page__container">
 
 				<!-- Holds the navigation menu for desktop-->
 				<nav id="desktop">
 
 					<ul>
 						<a href="../index.html"><li>Home</li></a>
-						<a href="aboutUs.html"><li>More About Us</li></a>
+						<a href="aboutUs.html" class="nav__active"><li>More About Us</li></a>
 						<a href="education.html"><li>Educational Resources</li></a>
 						<a href="articles.html"><li>Articles</li></a>
 						<a href="gallery.html"><li>Photo Competition - Gallary</li>
@@ -159,8 +159,9 @@
 			<footer>
 				
 			</footer>
-			
+
 		</div>
+		
 
 		<script type="text/javascript" src="../js/script.js"></script>
 		<script src="https://code.jquery.com/jquery-1.12.4.js"></script>
