--- a/pages/education.html
+++ b/pages/education.html
@@ -34,7 +34,7 @@
 						<ul>
 							<a href="../index.html"><li>Home</li></a>
 							<a href="aboutUs.html"><li>More About Us</li></a>
-							<a href="education.html"><li>Educational Resources</li></a>
+							<a href="education.html" class="nav__active"><li>Educational Resources</li></a>
 							<a href="articles.html"><li>Articles</li></a>
 							<a href="gallery.html"><li>Photo Competition - Gallary</li>
 							<a href="joinUs.html"><li class="highlighted">Join Us</li></a>
@@ -51,7 +51,7 @@
 			</header>
 
 			<!-- Nuts and bolts of the site, Contains the sections and navigation -->
-			<div class="body">
+			<div class="page__container">
 
 				<!-- Holds the navigation menu for desktop-->
 				<nav id="desktop">
@@ -59,7 +59,7 @@
 					<ul>
 						<a href="../index.html"><li>Home</li></a>
 						<a href="aboutUs.html"><li>More About Us</li></a>
-						<a href="education.html"><li>Educational Resources</li></a>
+						<a href="education.html" class="nav__active"><li>Educational Resources</li></a>
 						<a href="articles.html"><li>Articles</li></a>
 						<a href="gallery.html"><li>Photo Competition - Gallary</li>
 						<a href="joinUs.html"><li class="highlighted">Join Us</li></a>
@@ -84,7 +84,7 @@
 								<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod...</p>
 							</div>
 							<div class="article__container--btn">
-								<a href="articleThreats.html">
+								<a href="#">
 									<span class="article__btn">
 										<p>More</p>
 									</span>
