--- a/pages/joinUs.html
+++ b/pages/joinUs.html
@@ -37,7 +37,7 @@
 							<a href="education.html"><li>Educational Resources</li></a>
 							<a href="articles.html"><li>Articles</li></a>
 							<a href="gallery.html"><li>Photo Competition - Gallary</li>
-							<a href="joinUs.html"><li class="highlighted">Join Us</li></a>
+							<a href="joinUs.html" class="nav__active"><li class="highlighted">Join Us</li></a>
 							<a href="#"><li class="highlighted">Donations</li></a>
 						</ul>
 					</nav>
@@ -51,7 +51,7 @@
 			</header>
 
 			<!-- Nuts and bolts of the site, Contains the sections and navigation -->
-			<div class="body">
+			<div class="page__container">
 
 				<!-- Holds the navigation menu for desktop-->
 				<nav id="desktop">
@@ -62,7 +62,7 @@
 						<a href="education.html"><li>Educational Resources</li></a>
 						<a href="articles.html"><li>Articles</li></a>
 						<a href="gallery.html"><li>Photo Competition - Gallary</li>
-						<a href="joinUs.html"><li class="highlighted">Join Us</li></a>
+						<a href="joinUs.html" class="nav__active"><li class="highlighted">Join Us</li></a>
 						<a href="#"><li class="highlighted">Donations</li></a>
 					</ul>
 
