--- a/pages/gallery.html
+++ b/pages/gallery.html
@@ -77,7 +77,7 @@
 							<h2>Sample of 2019 Photographs from Members</h2>
 						</div>
 						<div class="section__span">
-							<a class="btn__link" href="https://photos.google.com/share/AF1QipPUvca02QTZ3UGZuOTITh-3i7ESoGS2-UIcxzh9RbpS6Sp3kEYqq34QxpW_FxhIIQ?key=bVpIeEw1cWRjcG5wVHk5ZXUwUTN0T2J4di1WaU9n">
+							<a class="btn__link" href="https://photos.google.com/share/AF1QipPUvca02QTZ3UGZuOTITh-3i7ESoGS2-UIcxzh9RbpS6Sp3kEYqq34QxpW_FxhIIQ?key=bVpIeEw1cWRjcG5wVHk5ZXUwUTN0T2J4di1WaU9n" target="_blank">
 								<div class="section__btn btn">
 									<p class="btn">All from 2019</p>
 								</div>
