fixed spelling errors

--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
 
 				<!-- Title of the site -->
 				<div class="head__title">
-					<h1>Guardians Of P&amacr;uatahnui Inlet</h1>
+					<h1>Guardians Of P&amacr;uatahanui Inlet</h1>
 				</div>
 
 			</header>
@@ -71,7 +71,7 @@
 				<!-- Holds the articles and content of the website -->
 				<div class="section section__articles">
 
-					<h2>Welcome to The Guardians of P&amacr;uatahnui Inlet</h2>
+					<h2>Welcome to The Guardians of P&amacr;uatahanui Inlet</h2>
 					<div class="section__article--text">
 						<p>P&amacr;uatahanui Inlet is the only large estuarine wetland left in the lower half of New Zealand's North Island. It is at risk, mainly from human activities in both the Inlet and its catchment. We call ourselves the 'Guardians of Pāuatahanui Inlet' because we work to promote recognition of the ecological, recreational and cultural values of the Inlet.</p>
 					</div>
