--- a/pages/aboutUs.html
+++ b/pages/aboutUs.html
@@ -45,7 +45,7 @@
 
 				<!-- Title of the site -->
 				<div class="head__title">
-					<h1>Guardians Of P&amacr;uatahnui Inlet</h1>
+					<h1>Guardians Of P&amacr;uatahanui Inlet</h1>
 				</div>
 
 			</header>
@@ -72,7 +72,7 @@
 				<div class="section section__articles">
 				
 					<div class="section__span">
-						<h2>About Guardians of P&amacr;uatahnui Inlet</h2>
+						<h2>About Guardians of P&amacr;uatahanui Inlet</h2>
 					</div>
 
 					<!-- Div containing the carousel image -->
