--- a/pages/joinUs.html
+++ b/pages/joinUs.html
@@ -45,7 +45,7 @@
 
 				<!-- Title of the site -->
 				<div class="head__title">
-					<h1>Guardians Of P&amacr;uatahnui Inlet</h1>
+					<h1>Guardians Of P&amacr;uatahanui Inlet</h1>
 				</div>
 
 			</header>
